# zero_to_prod_backend_rust

./: .gitignore  Cargo.toml  README.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
