[package]
name = "zero_to_prod_backend_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
config = "0.15.21"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.22.0", features = ["v4"] }
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
